--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,10 @@ body {
     font-family: 'Open Sans Condensed';
     padding: 20px 60px;
 }
+h1 {
+    font-weight: bold;
+}
+a {
+    text-decoration: none;
+    color: black;
+}
