--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
+* {
+    box-sizing: border-box;
+}
 body {
     font-family: 'Open Sans Condensed';
     padding: 20px 60px;
 }
+
 h1 {
     font-weight: bold;
 }
